--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "Made with create-react-library",
+  "name": "components-react-lib",
+  "version": "1.0.2",
+  "description": "My personal react components library",
   "author": "r-oland",
   "license": "MIT",
-  "repository": "r-oland/test",
+  "repository": "r-oland/components-react-lib",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -24,9 +24,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "styled-components": "^5.1.0",
     "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
@@ -42,12 +44,12 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {}
 }
