--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
   "files.exclude": {
-    // ".env": true,
+    ".env": true,
     // "node_modules": true,
-    // ".gitignore": true,
-    // "desktop.ini": true,
-    // "package-lock.json": true,
+    ".gitignore": true,
+    "desktop.ini": true,
+    "package-lock.json": true,
     // "package.json": true,
-    // ".babelrc": true,
-    // "dist": true,
-    // ".editorconfig": true,
-    // ".eslintrc": true,
-    // ".travis.yml": true,
-    // "README.md": true,
-    // "rollup.config.js": true,
-    // "example": true
+    "dist": true,
+    ".editorconfig": true,
+    ".eslintrc": true,
+    ".travis.yml": true,
+    "README.md": true,
+    "example": true,
+    ".eslintignore": true,
+    ".npmignore": true
   },
   "files.associations": {
     "*.js": "javascriptreact"
