--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "peerDependencies": {
     "react": "^16.0.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "framer-motion": "^1.10.3",
+    "styled-system": "^5.1.5",
+    "hooks-lib": "^1.0.1"
   },
   "devDependencies": {
-    "styled-components": "^5.1.0",
-    "microbundle-crl": "^0.13.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -43,10 +44,15 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "hooks-lib": "^1.0.1",
+    "microbundle-crl": "^0.13.10",
+    "framer-motion": "^1.10.3",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.1.0",
+    "styled-system": "^5.1.5"
   },
   "files": [
     "dist"
