--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "hooks-lib": "^1.0.1"
   },
   "devDependencies": {
+    "framer-motion": "^1.10.3",
     "babel-eslint": "^10.0.3",
+    "styled-system": "^5.1.5",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
@@ -46,13 +48,11 @@
     "gh-pages": "^2.2.0",
     "hooks-lib": "^1.0.1",
     "microbundle-crl": "^0.13.10",
-    "framer-motion": "^1.10.3",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
-    "styled-components": "^5.1.0",
-    "styled-system": "^5.1.5"
+    "styled-components": "^5.1.0"
   },
   "files": [
     "dist"
