--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,20 @@
 {
   "files.exclude": {
     ".env": true,
-    // "node_modules": true,
+    "node_modules": true,
     ".gitignore": true,
     "desktop.ini": true,
     "package-lock.json": true,
-    // "package.json": true,
-    // "dist": true,
+    "package.json": true,
+    "dist": true,
     ".editorconfig": true,
     ".eslintrc": true,
     ".travis.yml": true,
     "README.md": true,
     "example": true,
     ".eslintignore": true,
-    ".npmignore": true
+    ".npmignore": true,
+    "jsconfig.json": true
   },
   "files.associations": {
     "*.js": "javascriptreact"
