--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "files.exclude": {
     ".env": true,
     "node_modules": true,
-    ".gitignore": true,
+    // ".gitignore": true,
     "desktop.ini": true,
     "package-lock.json": true,
     "package.json": true,
@@ -12,8 +12,8 @@
     ".travis.yml": true,
     "README.md": true,
     "example": true,
-    ".eslintignore": true,
-    ".npmignore": true,
+    // ".eslintignore": true,
+    // ".npmignore": true,
     "jsconfig.json": true
   },
   "files.associations": {
