--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hooks-lib": "^1.0.5"
   },
   "devDependencies": {
+    "@popmotion/popcorn": "^0.4.4",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.0.0",
@@ -44,7 +45,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "framer-motion": "^1.10.3",
     "gh-pages": "^2.2.0",
-    "hooks-lib": "^1.0.5",
+    "hooks-lib": "^1.0.6",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
@@ -55,5 +56,7 @@
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "@popmotion/popcorn": "^0.4.4"
+  }
 }
